# xtts-webui-poetry

./: README.md  pyproject.toml  requirements.txt
scripts/: modeldownloader.py
