[tool.poetry]
name = "xtts-webui-poetry"
version = "0.1.0"
description = "XTTS inference web UI with enhanced performance using poetry"
authors = ["vitalii.slobolinskyi"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

# Platform-specific installations for torch and torchaudio:
torch = [
  { url = "https://download.pytorch.org/whl/cu118/torch-2.1.1%2Bcu118-cp311-cp311-win_amd64.whl#sha256=e8d328ea5757c943ef61a08149b9bd2881664b967c5b341aba2faec53e1c3e5f", markers = "sys_platform == 'win32'" },
  { url = "https://download.pytorch.org/whl/cu118/torch-2.1.1%2Bcu118-cp311-cp311-linux_x86_64.whl#sha256=8cf61039d0583ce33d1c567acd16d46a270d41a4542a56ce22912e780e70743d", markers = "sys_platform == 'linux'" }
]
torchaudio = [
  { url = "https://download.pytorch.org/whl/cu118/torchaudio-2.1.1%2Bcu118-cp311-cp311-win_amd64.whl#sha256=79b5afa556063be18de4a1964339242301fe04e782e1030a22695257dd9afbd2", markers = "sys_platform == 'win32'" },
  { url = "https://download.pytorch.org/whl/cu118/torchaudio-2.1.1%2Bcu118-cp311-cp311-linux_x86_64.whl#sha256=3ffc07c7de6a06f4b30abfc7ae563308fcfb53d0adaa8151db9072f9764b0ea6", markers = "sys_platform == 'linux'" }
]

gradio = "4.43.0"
faster-whisper = "1.0.0"
coqui-tts = { version = "0.23.1", extras = ["languages"] }
pypinyin = ">=0.51.0"
hangul_romanize = ">=0.1.0"
langid = ">=1.1.6"
noisereduce = ">=3.0.2"
pedalboard = ">=0.9.0"
pydub = ">=0.25.1"
ffmpeg-python = ">=0.2.0"
soundfile = ">=0.12.1"
cutlet = ">=0.3.0"
fugashi = { version = ">=1.3.2", extras = ["unidic-lite"] }
loguru = ">=0.7.2"
omegaconf = "2.3.0"
resampy = "0.4.2"
tabulate = ">=0.9.0"
requests = ">=2.32.0"
faiss-cpu = ">=1.8.0"
pyworld = ">=0.3.4"
torchcrepe = ">=0.0.23"
praat-parselmouth = ">=0.4.2"
translators = ">=5.9.3"
spacy = ">=3.2.0"
transformers = ">=4.34.0,<4.36.0"
deepl = "*"
pysubs2 = ">=1.7.2"
whisperx = ">=3.1.1"
silero-tts = ">=0.0.5"
wassima = "1.1.2"
aria2 = "^0.0.1b0"
aria2p = "^0.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"